# systemd-shimd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
data/dbus-1/system-services/: org.freedesktop.systemd1.service
data/dbus-1/system.d/: org.freedesktop.systemd1.conf
include/systemd/: _sd-common.h  sd-daemon.h  sd-id128.h  sd-journal.h
src/: dbus-service.c  dbus-service.cpp  journalctl.c  journalctl.cpp  libsystemd.c  libsystemd.cpp  systemctl.c  systemctl.cpp  systemd-analyze.cpp  systemd-shimd.h  systemd-shimd.hpp
src/common/: backend.h  backend_helpers.c  backend_helpers.h  backend_openrc.c  backend_resolver.c  backend_runit.c  backend_s6.c  backend_sysvinit.c  init_detect.c  init_detect.h  log_reader.c  log_reader.h
src/dbus-service/: main.c
src/journalctl/: main.c
src/systemctl/: main.c
